# relucent

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  relucent.html  requirements.txt  search.html  searchindex.js
.github/workflows/: publish.yml  python-package.yml
_sources/: index.rst.txt  relucent.rst.txt
docs/: conf.py  index.rst
src/relucent/: __init__.py  bvs.py  complex.py  convert_model.py  model.py  poly.py  ss.py  todo.out  utils.py
tests/: __init__.py  conftest.py  helpers.py  test_complex.py  test_convert_model.py  test_imports.py  test_model.py  test_polyhedron.py  test_save_load.py  test_ss.py  test_utils.py
