[build-system]
requires = ["uv_build >= 0.9.5, <0.10.0"]
build-backend = "uv_build"

[project]
name = "relucent"
version = "0.1.0"
requires-python = ">= 3.13, <3.14"
authors = [{ name = "Blake B. Gaines" }]
license = "AGPL-3.0-or-later"
readme = "README.md"
dynamic = ["dependencies"]               # Tells build tools to look elsewhere

[project.optional-dependencies]
cli = ["pyvis", "kaleido"]

[project.urls]
Homepage = "https://github.com/bl-ake/relucent"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
